test/corpus/basic.txt
=====================================
Variable declaration
=====================================

var x = 42
var name = "hello"
var flag = True

---

(source_file
  (variable_declaration
    name: (identifier)
    value: (primary_expression
      (number)))
  (variable_declaration
    name: (identifier)
    value: (primary_expression
      (string
        (string_content))))
  (variable_declaration
    name: (identifier)
    value: (primary_expression
      (boolean))))

=====================================
Function calls
=====================================

TcpStart(conn_id)
WDWait(0.5)
TcpSend(tcp_id, "hello")

---

(source_file
  (expression_statement
    (primary_expression
      (function_call
        function: (identifier)
        arguments: (argument_list
          (primary_expression
            (identifier))))))
  (expression_statement
    (primary_expression
      (function_call
        function: (identifier)
        arguments: (argument_list
          (primary_expression
            (number))))))
  (expression_statement
    (primary_expression
      (function_call
        function: (identifier)
        arguments: (argument_list
          (primary_expression
            (identifier))
          (primary_expression
            (string
              (string_content))))))))

=====================================
Comments
=====================================

// this is a comment
var x = 42
// end

---

(source_file
  (comment)
  (variable_declaration
    name: (identifier)
    value: (primary_expression
      (number)))
  (comment))

=====================================
Return statement
=====================================

return result

---

(source_file
  (return_statement
    (primary_expression
      (identifier))))

=====================================
For loop
=====================================

For i = 1 to 5 {
  WDWait(1)
}

---

(source_file
  (for_statement
    variable: (identifier)
    start: (primary_expression
      (number))
    end: (primary_expression
      (number))
    body: (block
      (expression_statement
        (primary_expression
          (function_call
            function: (identifier)
            arguments: (argument_list
              (primary_expression
                (number)))))))))

=====================================
ForEach loop
=====================================

ForEach item in myList {
  DebugMessage(item)
}

---

(source_file
  (foreach_statement
    variable: (identifier)
    iterable: (primary_expression
      (identifier))
    body: (block
      (expression_statement
        (primary_expression
          (function_call
            function: (identifier)
            arguments: (argument_list
              (primary_expression
                (identifier)))))))))
